--- a/android-kotlin/feature_navigateBar/src/main/res/layout/activity_navigate.xml
+++ b/android-kotlin/feature_navigateBar/src/main/res/layout/activity_navigate.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipChildren="false"
@@ -9,14 +10,17 @@
     android:background="@drawable/main_bg">
 
     <!-- Main content fills whole screen -->
+
+    <!-- Bottom nav bar floating 15dp above bottom -->
     <FrameLayout
         android:id="@+id/mainFragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp" />
 
-    <!-- Bottom nav bar floating 15dp above bottom -->
     <FrameLayout
         android:id="@+id/bottomNavContainer"
         android:layout_width="match_parent"
