--- a/android-kotlin/feature_saveRoute/src/main/res/layout/saved_routes.xml
+++ b/android-kotlin/feature_saveRoute/src/main/res/layout/saved_routes.xml
@@ -5,8 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/routespage"
-    tools:context=".SchedulesFragment">
+    android:background="@drawable/main_bg"
+    tools:context=".SavedRoutesActivity">
 
     <ImageView
         android:id="@+id/saved_routes_img1"
