--- a/android-kotlin/feature_navigateBar/src/main/res/layout/activity_change_password.xml
+++ b/android-kotlin/feature_navigateBar/src/main/res/layout/activity_change_password.xml
@@ -21,9 +21,6 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <!-- title -->
-
-    <!-- current password -->
-
     <TextView
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
@@ -44,6 +41,8 @@
         android:hint="Current Password"
         android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@id/titleText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="40dp" />
 
     <!-- new password -->
@@ -52,6 +51,8 @@
         style="@style/StyledInput"
         android:hint="New Password"
         android:inputType="textPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/currentPassword"
         android:layout_marginTop="20dp" />
 
@@ -62,6 +63,8 @@
         android:hint="Confirm New Password"
         android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@id/newPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp" />
 
     <!-- submit button -->
