--- a/android-kotlin/feature_home/src/main/res/values/colors.xml
+++ b/android-kotlin/feature_home/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="half_white">#80FFFFFF</color>
+    <color name="half_black">#80000000</color>
 </resources>
