--- a/android-kotlin/feature_home/src/main/res/drawable/btn_bg_light_ripple.xml
+++ b/android-kotlin/feature_home/src/main/res/drawable/btn_bg_light_ripple.xml
@@ -1,11 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="?attr/colorControlHighlight">
-    <item android:id="@android:id/mask"
-        android:drawable="@drawable/btn_bg_light" />
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent"/>
-        </shape>
-    </item>
+
+    <!-- This is the visible background -->
+    <item android:drawable="@drawable/btn_bg_light" />
+
 </ripple>
