--- a/android-kotlin/feature_home/src/main/res/layout/item_daily_commute_card.xml
+++ b/android-kotlin/feature_home/src/main/res/layout/item_daily_commute_card.xml
@@ -1,28 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginHorizontal="8dp"
     app:cardCornerRadius="12dp"
     app:cardElevation="4dp"
-    android:background="@color/white">
+    app:cardBackgroundColor="@android:color/transparent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:background="@drawable/tab_background">
 
         <TextView
             android:id="@+id/dayTitle"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Today"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:gravity="center"
+            android:background="@drawable/pill_black"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="12dp"
+            android:layout_gravity="center"
             android:layout_marginBottom="12dp" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -39,10 +44,10 @@
             android:layout_weight="1"
             android:text="No commutes planned"
             android:textSize="14sp"
-            android:textColor="@color/half_black"
+            android:textColor="@color/half_white"
             android:gravity="center"
             android:visibility="gone" />
 
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
