--- a/android-kotlin/feature_navigateBar/src/main/res/drawable/rounded_glass_ripple.xml
+++ b/android-kotlin/feature_navigateBar/src/main/res/drawable/rounded_glass_ripple.xml
@@ -1,7 +1,4 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="?attr/colorControlHighlight">
-
-    <!-- Visible background -->
-    <item android:drawable="@drawable/btn_bg_dark" />
-
+    <item android:drawable="@drawable/btn_bg_light" />
 </ripple>
