--- a/android-kotlin/feature_navigateBar/src/main/res/layout/activity_about_us.xml
+++ b/android-kotlin/feature_navigateBar/src/main/res/layout/activity_about_us.xml
@@ -4,14 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/menu_bg"
-    android:padding="24dp">
+    android:background="@drawable/main_bg"
+    android:padding="24dp"
+    android:paddingTop="40dp">
 
     <ImageView
         android:id="@+id/btnBack"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:src="@drawable/ic_arrow_back"
+        android:src="@drawable/ic_back_arrow"
         android:contentDescription="back"
         android:clickable="true"
         android:focusable="true"
