--- a/android-kotlin/feature_navigateBar/src/main/res/layout/activity_change_password.xml
+++ b/android-kotlin/feature_navigateBar/src/main/res/layout/activity_change_password.xml
@@ -1,84 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/menu_bg"
+    android:layout_gravity="center"
+    android:background="@drawable/main_bg"
+    android:orientation="vertical"
     android:padding="24dp">
 
-    <!-- back button -->
-    <ImageView
-        android:id="@+id/btnBack"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:src="@drawable/ic_arrow_back"
-        android:contentDescription="Back"
-        android:clickable="true"
-        android:focusable="true"
-        android:tint="#000000"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <!-- title -->
-    <TextView
-        android:id="@+id/titleText"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:text="Change Password"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/btnBack"
-        app:layout_constraintStart_toEndOf="@id/btnBack"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.437" />
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:orientation="horizontal"
+        android:paddingTop="40dp">
+
+        <!-- back button -->
+        <ImageView
+            android:id="@+id/btnBack"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:clickable="true"
+            android:contentDescription="Back"
+            android:focusable="true"
+            android:src="@drawable/id_back_arrow"
+            android:tint="#000000"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- title -->
+        <TextView
+            android:id="@+id/titleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:text="Change Password"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <EditText
         android:id="@+id/currentPassword"
         style="@style/StyledInput"
+        android:layout_marginTop="40dp"
         android:hint="Current Password"
-        android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@id/titleText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="40dp" />
+        android:inputType="textPassword" />
 
     <!-- new password -->
     <EditText
         android:id="@+id/newPassword"
         style="@style/StyledInput"
+        android:layout_marginTop="20dp"
         android:hint="New Password"
-        android:inputType="textPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/currentPassword"
-        android:layout_marginTop="20dp" />
+        android:inputType="textPassword" />
 
     <!-- confirm new password -->
     <EditText
         android:id="@+id/confirmPassword"
         style="@style/StyledInput"
+        android:layout_marginTop="20dp"
         android:hint="Confirm New Password"
-        android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@id/newPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp" />
+        android:inputType="textPassword" />
 
     <!-- submit button -->
     <Button
         android:id="@+id/submitBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="Submit"
-        android:backgroundTint="#FFFFFF"
-        android:textColor="#7B4A2D"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/confirmPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp" />
+        android:textColor="#ffffff"
+        android:textStyle="bold" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
