--- a/android-kotlin/feature_login/src/main/res/layout/activity_register.xml
+++ b/android-kotlin/feature_login/src/main/res/layout/activity_register.xml
@@ -1,6 +1,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -99,7 +100,6 @@
                 app:boxCornerRadiusBottomEnd="50dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:endIconMode="custom"
-                app:endIconDrawable="@drawable/ic_email"
                 app:endIconTint="@android:color/white"
                 android:textColorHint="#80ffffff"
                 android:layout_marginBottom="16dp">
